WhatsApp: added simple implementation for whatsapp messaging, updated to openJdk 17